--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,9 +2,9 @@ name: Rust
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, feature/log ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, feature/log ]
 
 env:
   CARGO_TERM_COLOR: always
