--- a/.github/workflows/test_svn_builder.yml
+++ b/.github/workflows/test_svn_builder.yml
@@ -15,6 +15,8 @@ jobs:
       - uses: docker/build-push-action@v2
         id: docker_build
         name: Build docker image
+        context: ./tests/custom_svn_box
+        file: ./tests/custom_svn_box/Dockerfile
         with:
           push: false
           tags: rsvn_box
