removed runnign of svn box added service

--- a/.github/workflows/test_svn_builder.yml
+++ b/.github/workflows/test_svn_builder.yml
@@ -4,6 +4,13 @@ name: SVNBox
 
 on: [push]
 
+services:
+  nginx:
+    image: nginx
+    ports:
+      - 8080:80
+
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -23,9 +30,6 @@ jobs:
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
-
-      - name: Run Server
-        run: docker run -p 3690:3690 ${{ steps.docker_build.outputs.digest }} 
     
       - name: Run Svn command
         run: svn co svn://localhost:3690/Test Test
