--- a/.github/workflows/test_svn_builder.yml
+++ b/.github/workflows/test_svn_builder.yml
@@ -7,16 +7,29 @@ on: [push]
 
 
 jobs:
-  svn-job:
+  svn-build-job:
     runs-on: ubuntu-latest
-    services:
-      image: elleflorio/svn-server
-      
-
     steps:
       - uses: actions/checkout@v2
         name: Checkout code
         
+      - uses: docker/build-push-action@v2
+        id: docker_build
+        name: Build docker image
+        with:
+          context: ./tests/custom_svn_box
+          file: ./tests/custom_svn_box/Dockerfile
+          push: false
+          tags: rsvn_box
+      -
+        name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
+
+
+  svn-job:
+    runs-on: ubuntu-latest
+    services:
+      image: ${{ jobs.svn-build-job.steps.docker_build.outputs.digest }} 
 
 
   build:
